# agent-port

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  pubspec.yaml
.github/workflows/: release.yml
AgentMonitorService/: Cargo.toml
AgentMonitorService/src/: main.rs
android/app/: build.gradle.kts
docs/: PROJECT_STATUS.md
ios/: ExportOptions.plist
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/en.lproj/: InfoPlist.strings
ios/Runner/zh-Hans.lproj/: InfoPlist.strings
lib/: app.dart  main.dart
lib/core/: home_shell.dart  router.dart  theme.dart
lib/data/models/: api.dart  (+33 more)
lib/services/: api_provider.dart  demo_data.dart  environment_service.dart  host_service.dart  pane_log_service.dart  permission_service.dart  pip_service.dart  push_service.dart  settings_service.dart  snapshot_service.dart  tencent_asr_service.dart  terminal_session.dart  tray_service.dart  voice_input_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/scripts/: bundle_rust_service.sh
scripts/: package_macos.sh  release_ios_tf.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
windows/scripts/: bundle_binaries.ps1
(+21 files in other folders)
