[package]
name = "agent-monitor-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
portable-pty = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
